objects/Email_Message__c.object
<CustomObject>
    <description>Custom object to store auto emails to members.</description>
    <fields>
        <fullName>BCC_Address__c</fullName>
        <label>BCC Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <label>CC Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Opened__c</fullName>
        <label>First Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTML_Body__c</fullName>
        <label>HTML Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Externally_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Externally Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Incoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Opened__c</fullName>
        <label>Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message_Date__c</fullName>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <description>Owner First Name</description>
        <formula>left(  Owner:User.Username , find(&quot;.&quot; , Owner:User.Username) -1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Body__c</fullName>
        <label>Rich Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Body__c</fullName>
        <label>Text Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Addresss__c</fullName>
        <label>To Addresss</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Email Message</label>
    <nameField>
        <label>Email Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>